fixed scrollbug for quests suggestions, also added scrollbar design

--- a/styles/questSearch.css
+++ b/styles/questSearch.css
@@ -41,6 +41,15 @@
   .suggestions .selected {
     background-color: #333;
   }
+
+  .suggestions::-webkit-scrollbar {
+    width: 4px;
+  }
+  
+  .suggestions::-webkit-scrollbar-thumb {
+    background-color: #0a5;
+    border-radius: 10px;
+  }
   
   
   .input-row {
